# placid

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: pthread_mutex.rs
macro/: Cargo.toml  README.md
macro/src/: ctor.rs  derive.rs  init.rs  lib.rs
src/: init.rs  lib.rs  owned.rs  pin.rs  place.rs  uninit.rs
src/init/: and.rs  imp.rs  inspect.rs  or.rs  raw.rs  slice.rs  value.rs
src/owned/: fn_impl.rs
src/pin/: slice.rs
src/place/: array.rs  construct.rs  dyn_place.rs  fn_impl.rs  slice.rs
tests/: derive.rs  macro.rs
