[workspace]
members = ["macro"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[package]
edition.workspace = true
license.workspace = true
name = "placid"
version.workspace = true

[features]
default = ["fn-impl"]
fn-impl = []

[dependencies]
# Local crates
placid-macro = {path = "macro"}
# External crates
thiserror = {version = "2.0", default-features = false}
